--- a/gb/nf3046_5.md
+++ b/gb/nf3046_5.md
@@ -19,6 +19,7 @@
 
 目前，越来越多的国家和地区的政府与人民，开始对中共邪恶本质的觉.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月13日 9:37 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/7/2/n11358618.md#1" target="_blank">明真相后 大陆公检法人员抛弃中共</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/7/2/n11358618.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/image1-150x120.jpeg" align ="left"></a>在澳洲墨尔本，有这样一个团体，他们平和理性、坚忍善良，用20年的时间反抗嗜虐成性的暴政，这个团体就是法轮功。1999年7月20日，中共发动了对信仰“真、善、忍” 的法轮功修炼者的迫害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月06日 12:18 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/8/4/n11429169.md#1" target="_blank">每日三退声明精选（2019/08/02）</a><br></h3>我是一名毕业了几年的大学生，现在的生活压力太大了，民不聊生，连工作都不好找，网上舆论监控也很严，但是还是有那么多贪官情妇社会毒瘤，共产党内部就充满了贪污腐败，我爸还是一个书记，我从小耳濡目染也知道了这其中的不为人知的黑暗，在此我退出党、退团，希望早日移民。不再忍受这暗无天日的生活。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月03日 8:32 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/8/2/n11425261.md#1" target="_blank">每日三退声明精选（2019/08/01）</a><br></h3>我这一辈子谎话说的最多的时候就是我任共产党的党委书纪期间，我早就想退党，但苦于找不到退党网站，今有同学帮我操作，特委托他帮我退党，顺便也退出共青团、少先队组织，抹去兽印。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月02日 11:13 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/8/1/n11422573.md#1" target="_blank">每日三退声明精选（2019/07/31）</a><br></h3>本人小学时莫名其妙被入了队，到了中学就觉得共党的话“假大空”，团书记几次让我入团我都坚决拒绝，长大了翻墙看到了海外新闻，更觉得共党邪恶，现声明退出恶党一切组织，绝不与恶魔为伍。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月01日 10:50 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/7/30/n11417960.md#1" target="_blank">每日三退声明精选（2019/07/29）</a><br></h3>本人在亿丰汽车城买房子，被黑社会性质的公司骗了，同时很多人被骗，政府不作为，官黑勾结，为我们说话的好记者竟然被公安给抓了，这是什么世道！我们到处求告无门，政府腐败透顶。从这件事看清中共黑社会、恐怖治国的手段，退出曾经被骗加入的共青团、少先队。不做邪恶政权的接班人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月30日 11:02 AM							</td></tr>
@@ -42,6 +43,5 @@
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/7/8/n11370950.md#1" target="_blank">每日三退声明精选（2019/07/07）</a><br></h3>我叫罗易，是来自四川成都的青少年。我曾被共产党迷惑，入了共青团，但当我知道中共大肆迫害法轮功学员以及我身边一位老者给我讲述真善忍时，我觉悟了！在此，我彻底退出中共邪党的共青团。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月08日 11:37 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/7/7/n11369221.md#1" target="_blank">每日三退声明精选（2019/07/06）</a><br></h3>我们俩人决定退出中国共产党这个邪恶组织，多余的我们无需多说，中国共产党这个组织太邪恶，太恐怖，我们一定要退出。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月07日 11:26 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/7/5/n11365891.md#1" target="_blank">每日三退声明精选（2019/07/04）</a><br></h3>我住在福建沿海某县，是个90后，虽然福建沿海在90年代很乱，治安不算好，由于小时候受到的教育，总体上还是觉得共产党好，中小学时期跟着入了少先队和共青团，大学时我还主动入了党。可是今年我去了香港旅游，见到了法轮功大游行，收到了法轮功传单，也触及到了以前只是听说而不能碰的谷歌脸书YouTube等等。并因此看到了不少之前从未看到的黑幕，挑起内战、和平时期各种乱折腾.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月05日 11:54 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/7/4/n11363265.md#1" target="_blank">每日三退声明精选（2019/07/03）</a><br></h3>我是一名机关干部，经历过1989年的64事件，那时我是一名在校大学生，三十年过去了，虽然中共邪党骗人的手段有变化，但是愚弄人的实质没有变，我相信善恶有报，在此，我声明退出中共邪党。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月04日 11:15 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nf3046_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nf3046.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nf3046_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nf3046_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nf3046_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nf3046_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nf3046_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nf3046_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/kjeqw2335/djy/blob/master/gb/nf3046_5.md#1<br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nf3046_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/kjeqw2335/djy/blob/master/gb/nf3046_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nf3046_5.htm">http://www.epochtimes.com/gb/nf3046_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
